--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,8 +1,69 @@
 .navbar-nav {
 
   
-   margin-left: 63%;
+   margin-left: 58%;
   
+
+}
+
+.nav-link {
+
+   color: red !important;
+   font-weight: 900 !important;
+
+}
+
+.navbar {
+
+   border-bottom: 2px solid white;
+   background-color: transparent !important;
+
+}
+
+.titleStyle {
+
+   position: relative;
+   top: 5px;
+   left: 1em;
+   color: red;
+   font-weight: 900;
+   text-shadow: 3px 3px 3px purple;
+
+}
+
+.keyboardIcon {
+
+   width: 50px;
+   height: 50px;
+   padding: 1px;
+   border: 1px solid red;
+   box-shadow: 0px 0px 4px 3px purple !important;
+   border-radius: 40px;
+}
+
+button {
+
+   border: 1px solid red !important;
+   color: red !important;
+   font-weight: 900 !important;
+}
+
+input {
+   outline: none !important;
+   box-shadow: 0px 0px 4px 0px transparent !important;
+}
+
+input:hover, input:active, input:focus {
+
+  box-shadow: 0px 0px 4px 4px purple !important;
+   border:  1px solid red !important;
+
+
+}
+
+button:hover {
+
+   background-color: white !important;
 
 }
 
