--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,7 +10,9 @@
 
    color: red !important;
    font-weight: 900 !important;
-
+   background-color: white;
+   border-radius: 10px;
+   margin-right: 1em;
 }
 
 .navbar {
@@ -28,7 +30,7 @@
    color: red;
    font-weight: 900;
    text-shadow: 3px 3px 3px purple;
-
+  
 }
 
 .keyboardIcon {
@@ -68,6 +70,14 @@ button:hover {
 }
 
 @media only screen and (width: 400px) {
+
+   .nav-link {
+
+    text-align: center;
+    margin-bottom: 1em;
+    margin-top: 1em;
+
+   }
     .navbar-nav {
 
   
@@ -86,5 +96,13 @@ button:hover {
         margin-left: 0%;
        
      
+     }
+
+     .nav-link {
+
+      text-align: center;
+      margin-bottom: 1em;
+      margin-top: 1em;
+  
      }
   }
