--- a/public/css/home.css
+++ b/public/css/home.css
@@ -88,6 +88,7 @@ body {
   .containerItems {
 
     margin-top: 2em;
+    margin-bottom: 2em;
     border: 3px solid white;
     border-radius: 10px;
     padding: 10px;
