--- a/public/css/home.css
+++ b/public/css/home.css
@@ -95,6 +95,7 @@ body {
     margin-left: 0.5em;
     margin-right: 0.5em;
     background-color: black;
+    transition: 1s !important;
 
   }
 
@@ -119,3 +120,8 @@ border: 1px solid white;
     outline: 1px solid slategrey;
   }
 
+  .containerItems:hover {
+
+    transform: scale(1.1);
+
+}
