--- a/public/css/home.css
+++ b/public/css/home.css
@@ -3,7 +3,7 @@ body {
     background: url('/img/wallpaper/wallpaper.gif');
     background-size: 100%;
     background-position-y: 18%;
-
+    overflow-x: hidden !important;
 }
 
 .titleGame {
